tests/types/errors/match_pattern_mismatch.mochi
let x = 1
let result = match x {
  "one" => 1
}
